--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,7 +1,13 @@
 /* APARENCIA */
-/*barra lateral pagina de produtos */
-.widget-area .widget{
-	width:90% !important;
+/* Pag de cadastro*/
+
+/*  Fim pag de finalizacao de compra*/
+
+.elementor-element.elementor-button-danger .elementor-button {
+	background-color:#fe80a6!important;
+}
+.elementor-element.elementor-button-danger .elementor-button:hover {
+	background-color:pink!important;
 }
 
 /*Fim barra lateral pag de produtos  */
