modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -1,4 +1,11 @@
 /* APARENCIA */
+/* logo RKR*/
+.payment-image img{
+	width:4% !important;
+}
+
+/*FIM logo RKR   */
+
 /*barra lateral pagina de produtos */
 .widget-area .widget{
 	width:90% !important;
