modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style2.css
+++ b/wp-content/themes/shopay/style2.css
@@ -782,6 +782,14 @@
 		width:100%;
 	}
 	/* fim pag mais procurados*/
+	
+	/* logo RKR*/
+.payment-image img{
+	width:7% !important;
+}
+
+/*FIM logo RKR   */
+	
 }
 	
 @media (max-width: 407px){
