modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/style3.css
+++ b/wp-content/themes/shopay/style3.css
@@ -118,7 +118,7 @@ body .woocommerce #respond input#submit.alt:hover,
 body .woocommerce a.button.alt:hover, 
 body .woocommerce button.button.alt:hover, 
 body .woocommerce input.button.alt:hover {
-	background: #034997 !important; 
+	background: #034997; 
 }
 
 body .woocommerce .cart .button, 
