modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -4,6 +4,11 @@
 	font-size:95% !important;
 }
 
+.woocommerce form.checkout_coupon, .woocommerce form.login, .woocommerce form.register{
+	width:45% !important;
+	margin-left:26% !important;
+}
+
 /*FIM da pag de login  */
 
 
