modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -908,6 +908,17 @@ body .woocommerce #payment #place_order, .woocommerce-page #payment #place_order
 	}
 	
 	/* Fim da pag do produto*/
+	
+	/*pag login  */
+	
+.woocommerce form.checkout_coupon, .woocommerce form.login, .woocommerce form.register{
+	width:100% !important;
+	margin-left:0 !important;
+}
+	
+	/* FIM da pag login */
+	
+	
 } 
 
 @media (max-width: 320px) 
