modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1,6 +1,6 @@
 /* APARENCIA */
 /* pag de recuperar senha */
-#user-registration *, #user-registration.user-registration{
+#user-registration{
 	width:50% !important;
 }
 
