modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1,7 +1,9 @@
 /* APARENCIA */
 /* pag de recuperar senha */
+@media (min-width:700px){
 #user-registration{
 	width:50% !important;
+}
 }
 
 /* FIM pag de recuperar senha */
