modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -48,6 +48,9 @@ div.wpforms-container-full .wpforms-form .wpforms-required-label{
 	font-size:90% !important;
 }
 
+.elementor-2363 .elementor-element.elementor-element-1ca8194 .elementor-heading-title{
+	font-size: 200% !important;
+}
 
 /*  FIM Pag do contato */
 
