--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -1,3 +1,7 @@
+.main-category-list-title {
+    padding: 5px 0;
+}
+
 @media (min-width:1600px) {
   .mt-container {
     width: 1500px;
@@ -31,6 +35,10 @@
     width: 1200px;
     margin: 0 auto;
   }
+	
+  .main-category-list-title {
+    padding: 5px 0;
+  }
 }
 
 @media (min-width: 1500px) {
@@ -42,6 +50,8 @@
     padding-left: 5px;
   }
 }
+
+
 
 @media (max-width: 1440px) {
 	.main-category-list-title {
