modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -78,6 +78,10 @@
 	display: none;
 }
 
+.sm_search_form {
+	display: flex;
+}
+
 .header-search-form-wrap .search-form, .search-wrap {
     display: block;
 }
