modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -4,6 +4,10 @@
 	width: 100px;	
 }
 
+.woocommerce ul.products li.product .button.yith-wcqv-button {
+    display: none;
+}
+
 .header-woo-links-wrap {
     float: right;
     padding: 22px 0px 0px 40px;
