modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -12,6 +12,10 @@
 	display: none;
 }
 
+#woocommerce_product_categories-1 {
+	display: none;
+}
+
 .header-woo-links-wrap {
     float: right;
     padding: 22px 0px 0px 40px;
