modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/assets/css/responsive.css
+++ b/wp-content/themes/shopay/assets/css/responsive.css
@@ -61,6 +61,10 @@
 	.main-category-list-title {
 		padding: 7px 0;
 	}
+	
+	.home .main-category-list-title {
+		padding: 17px 0;
+	}
 }
 
 @media (max-width: 1400px) {
