--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -172,7 +172,11 @@
 	}
 }
 
-@media (max-width: 425px)
+@media (max-width: 425px) {
+	#masthead .custom-logo {
+		width: 55px;
+	}
+	
 	.header-woo-links-wrap {
 		float: right;
 		padding: 0px 0px 0px 0px;
