modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr2.css
+++ b/wp-content/themes/shopay/stylerkr2.css
@@ -1,6 +1,67 @@
 /* APARENCIA */
-/*Página de compra */
+/* Produtos recentes*/
 
+@media (min-width:721px){
+.shopay-image-figure-wrapper {
+    
+		width: 100% !important;
+    float:none;
+    position: relative;
+}
+
+.shopay-bg-image.cover-image{
+	height:250px !important;
+}
+
+.latest-products-wrap li{
+	float:none;
+}
+	.shopay_latest_product .latest-products-wrap li{
+		width:20% !important;
+		left:-2% !important;
+	}
+}
+
+
+
+@media (min-width:575px){
+.shopay-image-figure-wrapper {
+    
+		width: 100% !important;
+    float:none;
+    position: relative;
+}
+
+.shopay-bg-image.cover-image{
+	height:250px !important;
+}
+.latest-products-wrap li{
+		width:35% !important;
+	  left:10% !important;
+}
+
+	.latest-products-wrap li{
+	float:none;
+}
+	.shopay_latest_product .latest-products-wrap li{
+		width:20% !important;
+		left:-2% !important;
+	}
+	
+	.product-btns-wrap a.button{
+		width:100% !important;
+	}
+	
+}
+
+
+
+
+/* Fim produtos recentes*/
+
+
+
+/*Página de compra */
 
 @media (min-width:575px){
 .woocommerce ul.products.columns-3 li.product, .woocommerce-page ul.products.columns-3 li.product{
