modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -152,6 +152,11 @@
 
 
 @media(max-width: 768px) {
+	
+	#site-navigation #menu-principal-semchilique ul li {
+    	display: block !important;
+	}
+	
 	#masthead .custom-logo {
 		width: 80px;
 	}
