modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -195,6 +195,10 @@
 		display: contents !important;
 	}
 	
+	.main-category-list-title {
+    	width: 0% !important;
+	}
+	
 	.header-woo-links-wrap {
 		float: right;
 		padding: 0px 0px 0px 0px;
