modified theme `Shopay` version 1.1.1

--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -157,6 +157,10 @@
     	display: block !important;
 	}
 	
+	h2.main-category-list-title.cover-font {
+		padding: 10px 0px;
+	}
+	
 	#masthead .custom-logo {
 		width: 80px;
 	}
