--- a/wp-content/themes/shopay/stylerkr1.css
+++ b/wp-content/themes/shopay/stylerkr1.css
@@ -159,6 +159,11 @@
 
 @media(max-width: 768px) {
 	
+	#site-navigation #menu-principal-semchilique ul li .sub-menu li a, #site-navigation #menu-principal-semchilique ul li .children li a {
+		padding: 6px 20px;
+		text-align: left;
+	}
+	
 	#site-navigation #menu-principal-semchilique ul li {
     	display: block !important;
 	}
